Setting docker-compose.yml for MySQL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,19 @@ services:
                 - 'http://localhost:7700/health'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links: 
+            - mysql:mysql
+        ports:
+            - 8080:80
+        environment:
+            MYSQL_USERNAME: '${DB_USERNAME}'
+            MYSQL_ROOT_PADDWORD: '${DB_PASSWORD}'
+            PMA_HOST: mysql
+        networks:
+            - sail
+
     mailpit:
         image: 'axllent/mailpit:latest'
         ports:
